tests/snapshots/regression/semantic_types__patterns__non_exhaustive_bool_error.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx:3:5
  |
3 |     match flag {
  |     ^^^^^^^^^^^^
4 |         false -> 0,
  | ^^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
